[project]
name = "enyal-sdk"
version = "2.1.0"
description = "ENYAL SDK — encrypted knowledge graph, local memory, permanent proof"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Greenland AI Limited", email = "info@enyal.ai"}]
readme = "README.md"
keywords = ["enyal", "knowledge-graph", "zero-knowledge", "archival", "sdk"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
llm = ["httpx>=0.24"]
all = ["cryptography>=41.0", "httpx>=0.24"]

[project.urls]
Homepage = "https://enyal.ai"
Documentation = "https://enyal.ai/docs"
Repository = "https://github.com/JoulePAI/enyal-sdk-python"
